<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantallas"
    tools:context=".solicitud_nuevas_cuentas">
    <!-- PANTALLA PENDIENTE -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sublima_bold"
        android:text="Solicitudes de\nNuevos Usuarios"
        android:textAlignment="center"
        android:textColor="@color/letrasColor"

        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sublima_light"

        android:text="@string/nombre"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/sublima_light"

        android:text="FFFFF"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/lblUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sublima_light"

        android:text="@string/user"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/sublima_light"

        android:text="Lorem Ipsum"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/lblContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sublima_light"
        android:text="@string/pass"

        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/txtContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/sublima_light"
        android:text="Desconocido"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblContra" />

    <TextView
        android:id="@+id/lblCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        android:fontFamily="@font/sublima_light"
        android:text="@string/tipo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContra" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNCUENTA"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/estilo_inputs"

        android:hint="@string/dropDownSelect"
        android:inputType="none"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"

        android:textColorHint="@color/white"
        android:theme="@style/Spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCuenta">


        <AutoCompleteTextView
            android:id="@+id/dropdown_fieldNCUENTA"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20px"

            android:fontFamily="@font/sublima_light"
            android:inputType="none"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRechazar"
        android:layout_width="wrap_content"

        android:layout_height="40dp"

        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_continuar"
        android:fontFamily="@font/sublima_bold"
        android:paddingHorizontal="20sp"
        android:text="Rechazar"
        android:textColor="@drawable/btn_continuar_texto"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNCUENTA" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"

        android:layout_height="40dp"

        android:layout_marginTop="28dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/btn_continuar"
        android:fontFamily="@font/sublima_bold"
        android:paddingHorizontal="20sp"
        android:text="Aceptar"
        android:textColor="@drawable/btn_continuar_texto"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNCUENTA" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_regresar"
        android:fontFamily="@font/sublima_bold"

        android:text="Volver"
        android:textColor="@drawable/btn_regresar_texto"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>