<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantallas"
    tools:context=".unidad_existente">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sublima_bold"
        android:text="Unidad\nExistente"
        android:textAlignment="center"
        android:textColor="@color/letrasColor"

        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEliminarCuenta"
        android:layout_width="wrap_content"

        android:layout_height="30dp"

        android:layout_marginTop="32dp"
        android:background="@drawable/btn_continuar"
        android:fontFamily="@font/sublima_bold"
        android:paddingHorizontal="20sp"
        android:text="Eliminar Unidad"
        android:textColor="@drawable/btn_continuar_texto"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUbicacion" />

    <TextView
        android:id="@+id/txtPlacas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/sublima_light"
        android:text="Lorem Ipsum"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/lblUbicacion"
        tools:layout_editor_absoluteX="130dp" />

    <TextView
        android:id="@+id/lblUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sublima_light"

        android:text="@string/carroceria"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.375"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/lblPlacas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="80dp"
        android:fontFamily="@font/sublima_light"
        android:text="@string/placas"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lblUbicacion"
        tools:layout_editor_absoluteX="64dp" />

    <TextView
        android:id="@+id/txtChofer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/sublima_light"
        android:text="Lorem Ipsum"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/lblPlacas"
        tools:layout_editor_absoluteX="129dp" />

    <TextView
        android:id="@+id/lblChofer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/sublima_light"
        android:text="@string/kilometraje"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="@+id/txtPlacas"
        tools:layout_editor_absoluteX="122dp" />

    <TextView
        android:id="@+id/txtUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/sublima_light"
        android:text="Lorem Ipsum"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/lblChofer"
        tools:layout_editor_absoluteX="130dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_regresar"
        android:fontFamily="@font/sublima_bold"

        android:text="Volver"
        android:textColor="@drawable/btn_regresar_texto"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>